--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "url": "^0.11.3"
