app work with creating imageData model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "python.analysis.extraPaths": [
-        "./pythonDev/src/mongoDB"
+        "./pythonDev/src/mongoDB",
+        "./pythonDev/src/rest_api",
+        "./pythonDev/src"
     ]
 }
