--- a/app/moke_app/pubspec.yaml
+++ b/app/moke_app/pubspec.yaml
@@ -37,6 +37,15 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   flutter_secure_storage: ^9.2.2
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  get: ^4.6.6
+  image_picker: ^1.1.2
+  gap: ^3.0.1
+  riverpod: ^2.5.1
+  provider: ^6.1.2
+  uuid: ^4.4.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
